Refactor CMakeLists libraries

--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -13,16 +13,11 @@ set(_scripts_targets_visualize
     visualize_histograms_from_file
     visualize_graph_and_image
     )
-option(MERGE_GRAPHS "Enable merge graphs script." ON)
-if(MERGE_GRAPHS)
+if(ENABLE_COMPARE_GRAPHS)
     add_executable(merge_low_high_info_graphs merge_low_high_info_graphs.cpp)
-    target_link_libraries(merge_low_high_info_graphs SG )
-    target_link_libraries(merge_low_high_info_graphs SGVtk )
-    # target_link_libraries(merge_low_high_info_graphs ${Boost_LIBRARIES} )
-    # target_link_libraries(merge_low_high_info_graphs ${ITK_LIBRARIES} )
-    # target_link_libraries(merge_low_high_info_graphs ${VTK_LIBRARIES} )
+    target_link_libraries(merge_low_high_info_graphs SGCompareGraphs )
     if(VISUALIZE)
-        target_link_libraries(merge_low_high_info_graphs Qt5::Widgets Qt5::Xml )
+        # target_link_libraries(merge_low_high_info_graphs Qt5::Widgets Qt5::Xml )
         target_compile_definitions(merge_low_high_info_graphs PUBLIC VISUALIZE)
     endif()
 endif()
@@ -44,8 +39,7 @@ target_link_libraries(analyze_graph ${ITK_LIBRARIES} )
 target_link_libraries(analyze_graph ${DGTAL_LIBRARIES} )
 if(VISUALIZE)
     target_link_libraries(analyze_graph Qt5::Widgets Qt5::Xml )
-    target_link_libraries(analyze_graph SGVtk )
-    # target_link_libraries(analyze_graph ${VTK_LIBRARIES} )
+    target_link_libraries(analyze_graph SGVtkVisualize )
     target_compile_definitions(analyze_graph PUBLIC VISUALIZE)
 endif()
 
@@ -56,7 +50,7 @@ target_link_libraries(full_graph ${ITK_LIBRARIES} )
 target_link_libraries(full_graph ${DGTAL_LIBRARIES} )
 if(VISUALIZE)
     target_link_libraries(full_graph Qt5::Widgets Qt5::Xml )
-    target_link_libraries(full_graph SGVtk )
+    target_link_libraries(full_graph SGVtkVisualize )
     # target_link_libraries(full_graph ${VTK_LIBRARIES} )
     target_compile_definitions(full_graph PUBLIC VISUALIZE)
 endif()
@@ -96,7 +90,7 @@ if(VISUALIZE)
     target_link_libraries(visualize_histograms_from_file ${VTK_LIBRARIES} )
 
     add_executable(visualize_graph_and_image visualize_graph_and_image.cpp)
-    target_link_libraries(visualize_graph_and_image SG SGVtk)
+    target_link_libraries(visualize_graph_and_image SG SGVtkVisualize)
     target_link_libraries(visualize_graph_and_image ${Boost_LIBRARIES} )
     target_link_libraries(visualize_graph_and_image ${ITK_LIBRARIES} )
     target_link_libraries(visualize_graph_and_image ${DGTAL_LIBRARIES} )
