--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -13,15 +13,6 @@ set(_scripts_targets_visualize
     visualize_histograms_from_file
     visualize_graph_and_image
     )
-if(ENABLE_COMPARE_GRAPHS)
-    add_executable(merge_low_high_info_graphs merge_low_high_info_graphs.cpp)
-    target_link_libraries(merge_low_high_info_graphs SGCompareGraphs )
-    if(VISUALIZE)
-        # target_link_libraries(merge_low_high_info_graphs Qt5::Widgets Qt5::Xml )
-        target_compile_definitions(merge_low_high_info_graphs PUBLIC VISUALIZE)
-    endif()
-endif()
-
 add_executable(thin thin.cpp)
 target_link_libraries(thin ${Boost_LIBRARIES} )
 target_link_libraries(thin ${ITK_LIBRARIES} )
@@ -32,41 +23,49 @@ if(VISUALIZE)
     target_compile_definitions(thin PUBLIC VISUALIZE)
 endif()
 
+if(SG_MODULE_COMPARE)
+    add_executable(merge_low_high_info_graphs merge_low_high_info_graphs.cpp)
+    target_link_libraries(merge_low_high_info_graphs SGCompare )
+    if(VISUALIZE)
+        target_link_libraries(merge_low_high_info_graphs SGVisualize )
+        target_compile_definitions(merge_low_high_info_graphs PUBLIC VISUALIZE)
+    endif()
+endif()
+
 add_executable(analyze_graph analyze_graph.cpp)
-target_link_libraries(analyze_graph SG )
-target_link_libraries(analyze_graph ${Boost_LIBRARIES} )
+target_link_libraries(analyze_graph SGExtract SGAnalyze )
 target_link_libraries(analyze_graph ${ITK_LIBRARIES} )
 target_link_libraries(analyze_graph ${DGTAL_LIBRARIES} )
 if(VISUALIZE)
+    target_link_libraries(analyze_graph SGVisualize )
     target_link_libraries(analyze_graph Qt5::Widgets Qt5::Xml )
-    target_link_libraries(analyze_graph SGVtkVisualize )
     target_compile_definitions(analyze_graph PUBLIC VISUALIZE)
 endif()
 
 add_executable(full_graph full_graph.cpp)
-target_link_libraries(full_graph SG )
-target_link_libraries(full_graph ${Boost_LIBRARIES} )
-target_link_libraries(full_graph ${ITK_LIBRARIES} )
-target_link_libraries(full_graph ${DGTAL_LIBRARIES} )
+target_link_libraries(full_graph SGExtract SGAnalyze)
+target_link_libraries(full_graph
+    ${ITK_LIBRARIES}
+    ${DGTAL_LIBRARIES}
+    )
 if(VISUALIZE)
+    target_link_libraries(full_graph SGVisualize )
     target_link_libraries(full_graph Qt5::Widgets Qt5::Xml )
-    target_link_libraries(full_graph SGVtkVisualize )
-    # target_link_libraries(full_graph ${VTK_LIBRARIES} )
     target_compile_definitions(full_graph PUBLIC VISUALIZE)
 endif()
 
-add_executable(histograms_from_data histograms_from_data.cpp)
-target_link_libraries(histograms_from_data SG )
-target_link_libraries(histograms_from_data ${Boost_LIBRARIES} )
+if(SG_MODULE_ANALYZE)
+    add_executable(histograms_from_data histograms_from_data.cpp)
+    target_link_libraries(histograms_from_data SGAnalyze )
+endif()
 
 add_executable(create_distance_map create_distance_map.cpp)
-target_link_libraries(create_distance_map SG )
-target_link_libraries(create_distance_map ${Boost_LIBRARIES} )
+target_link_libraries(create_distance_map SGCore )
 target_link_libraries(create_distance_map ${ITK_LIBRARIES} )
 target_link_libraries(create_distance_map ${DGTAL_LIBRARIES} )
 
 add_executable(mask_distance_map_with_thin_image mask_distance_map_with_thin_image.cpp)
-target_link_libraries(mask_distance_map_with_thin_image SG )
+target_link_libraries(mask_distance_map_with_thin_image SGCore )
 target_link_libraries(mask_distance_map_with_thin_image ${Boost_LIBRARIES} )
 target_link_libraries(mask_distance_map_with_thin_image ${ITK_LIBRARIES} )
 
@@ -79,23 +78,19 @@ if(VISUALIZE)
     target_link_libraries(highlight_image_points ${VTK_LIBRARIES} )
 
     add_executable(visualize_histograms_from_file
-      visualize_histograms_from_file.cpp
-      ${SG_SRC_WITH_VTK_AND_QT}
-      )
-    target_link_libraries(visualize_histograms_from_file SG )
-    target_link_libraries(visualize_histograms_from_file ${Boost_LIBRARIES} )
+        visualize_histograms_from_file.cpp
+        # ${SG_SRC_WITH_VTK_AND_QT}
+        )
+    target_link_libraries(visualize_histograms_from_file SGAnalyze SGVisualize )
     target_link_libraries(visualize_histograms_from_file ${ITK_LIBRARIES} )
     target_link_libraries(visualize_histograms_from_file ${DGTAL_LIBRARIES} )
     target_link_libraries(visualize_histograms_from_file Qt5::Widgets Qt5::Xml )
-    target_link_libraries(visualize_histograms_from_file ${VTK_LIBRARIES} )
 
     add_executable(visualize_graph_and_image visualize_graph_and_image.cpp)
-    target_link_libraries(visualize_graph_and_image SG SGVtkVisualize)
-    target_link_libraries(visualize_graph_and_image ${Boost_LIBRARIES} )
+    target_link_libraries(visualize_graph_and_image SGVisualize)
     target_link_libraries(visualize_graph_and_image ${ITK_LIBRARIES} )
     target_link_libraries(visualize_graph_and_image ${DGTAL_LIBRARIES} )
     target_link_libraries(visualize_graph_and_image Qt5::Widgets Qt5::Xml )
-    target_link_libraries(visualize_graph_and_image ${VTK_LIBRARIES} )
 endif()
 
 if(VISUALIZE)
@@ -105,6 +100,6 @@ endif()
 # Even if you install the targets, the dependencies are not bundled/packaged
 # The user would have to set LD_LIBRARY_PATH poiting to the dependency libraries
 # DGtal, VTK, etc
-install(TARGETS ${_scripts_targets}
-        RUNTIME DESTINATION bin
-        )
+# install(TARGETS ${_scripts_targets}
+#         RUNTIME DESTINATION bin
+#         )
