--- a/test/mock_project/CMakeLists.txt
+++ b/test/mock_project/CMakeLists.txt
@@ -3,5 +3,5 @@ project(mock_project_using_SGEXT)
 # mock/test project to test SGEXTConfig.cmake
 find_package(SGEXT CONFIG REQUIRED)
 add_executable(mock_main mock_main.cpp)
-target_link_libraries(mock_main SGEXT::SG)
+target_link_libraries(mock_main SGEXT::SGAnalyze)
 
