--- a/modules/locate/test/CMakeLists.txt
+++ b/modules/locate/test/CMakeLists.txt
@@ -7,6 +7,6 @@ set(SG_MODULE_${SG_MODULE_NAME}_TESTS
   test_graph_points_locator.cpp
   )
 # Fixture defined in test/fixtures
-list(APPEND SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS graph_locator_fixtures)
+list(APPEND SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS FixtureMatchingGraphs)
 
 SG_add_gtests()
