--- a/test/fixtures/CMakeLists.txt
+++ b/test/fixtures/CMakeLists.txt
@@ -1,8 +1,8 @@
 # Add gtest fixtures as libraries
 
-add_library(graph_locator_fixtures graph_locator_fixtures.cpp)
-target_include_directories(graph_locator_fixtures PUBLIC .)
-target_link_libraries(graph_locator_fixtures
+add_library(FixtureMatchingGraphs FixtureMatchingGraphs.cpp)
+target_include_directories(FixtureMatchingGraphs PUBLIC .)
+target_link_libraries(FixtureMatchingGraphs
   SGCore
   ${Boost_LIBRARIES}
   ${GTEST_LIBRARIES}
