--- a/modules/compare/test/CMakeLists.txt
+++ b/modules/compare/test/CMakeLists.txt
@@ -6,6 +6,6 @@ set(SG_MODULE_${SG_MODULE_NAME}_TESTS
   test_compare_graphs.cpp
   )
 # Fixture defined in test/fixtures
-list(APPEND SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS graph_locator_fixtures)
+list(APPEND SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS FixtureMatchingGraphs)
 
 SG_add_gtests()
