Add spatial_graph_functors, num_edges. Refactor CloseFixtures

--- a/test/fixtures/CMakeLists.txt
+++ b/test/fixtures/CMakeLists.txt
@@ -1,6 +1,9 @@
 # Add gtest fixtures as libraries
 
-add_library(FixtureMatchingGraphs FixtureMatchingGraphs.cpp)
+add_library(FixtureMatchingGraphs
+  FixtureMatchingGraphs.cpp
+  FixtureCloseGraphs.cpp
+  )
 target_include_directories(FixtureMatchingGraphs PUBLIC .)
 target_link_libraries(FixtureMatchingGraphs
   SGCore
