get_vtk_points_from_graphs accepts a bounding box
get_vtk_points_from_graphs throws if points are not inside bounds.

BoundingBox gained helpers to interact with VTK `double * bounds`
And Print methods

--- a/modules/core/CMakeLists.txt
+++ b/modules/core/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SG_MODULE_${SG_MODULE_NAME}_DEPENDS
   ${Boost_LIBRARIES}
   histo)
 set(SG_MODULE_${SG_MODULE_NAME}_SOURCES
+    bounding_box.cpp
     edge_points_utilities.cpp
     filter_spatial_graph.cpp
     graph_data.cpp
