--- a/modules/extract/test/CMakeLists.txt
+++ b/modules/extract/test/CMakeLists.txt
@@ -1,6 +1,11 @@
+set(SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_DEPENDS "")
+# TODO is not really optional, you just want to pass an option to VISUALIZE tests
+list(APPEND SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_DEPENDS SGVisualize)
+
 set(SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
   ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
   ${SG_MODULE_${SG_MODULE_NAME}_DEPENDS}
+  ${SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_DEPENDS}
   ${DGTAL_LIBRARIES}
   ${GTEST_LIBRARIES})
 set(SG_MODULE_${SG_MODULE_NAME}_TESTS
