BUG: CMake: Add DGtal target_include_directories where needed

--- a/modules/extract/test/CMakeLists.txt
+++ b/modules/extract/test/CMakeLists.txt
@@ -8,6 +8,9 @@ set(SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
   ${SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_DEPENDS}
   ${DGTAL_LIBRARIES}
   ${GTEST_LIBRARIES})
+set(SG_MODULE_${SG_MODULE_NAME}_TEST_SYSTEM_INCLUDE_DIRS
+  ${DGTAL_INCLUDE_DIRS}
+  )
 set(SG_MODULE_${SG_MODULE_NAME}_TESTS
   test_merge_nodes.cpp
   test_spatial_graph_reduction.cpp
