--- a/cpp-scripts/CMakeLists.txt
+++ b/cpp-scripts/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(thin thin.cpp)
 target_link_libraries(thin ${Boost_LIBRARIES} )
 target_link_libraries(thin ${ITK_LIBRARIES} )
 target_link_libraries(thin ${DGTAL_LIBRARIES} )
+target_include_directories(thin PRIVATE ${DGTAL_INCLUDE_DIRS})
 if(VISUALIZE)
     target_link_libraries(thin Qt5::Widgets Qt5::Xml )
     target_link_libraries(thin ${VTK_LIBRARIES} )
@@ -45,6 +46,7 @@ add_executable(analyze_graph analyze_graph.cpp)
 target_link_libraries(analyze_graph SGExtract SGAnalyze )
 target_link_libraries(analyze_graph ${ITK_LIBRARIES} )
 target_link_libraries(analyze_graph ${DGTAL_LIBRARIES} )
+target_include_directories(analyze_graph PRIVATE ${DGTAL_INCLUDE_DIRS} )
 if(VISUALIZE)
     target_link_libraries(analyze_graph SGVisualize )
     target_link_libraries(analyze_graph Qt5::Widgets Qt5::Xml )
@@ -57,6 +59,7 @@ target_link_libraries(full_graph
     ${ITK_LIBRARIES}
     ${DGTAL_LIBRARIES}
     )
+target_include_directories(full_graph PRIVATE ${DGTAL_INCLUDE_DIRS})
 if(VISUALIZE)
     target_link_libraries(full_graph SGVisualize )
     target_link_libraries(full_graph Qt5::Widgets Qt5::Xml )
@@ -72,6 +75,7 @@ add_executable(create_distance_map create_distance_map.cpp)
 target_link_libraries(create_distance_map SGCore )
 target_link_libraries(create_distance_map ${ITK_LIBRARIES} )
 target_link_libraries(create_distance_map ${DGTAL_LIBRARIES} )
+target_include_directories(create_distance_map PRIVATE ${DGTAL_INCLUDE_DIRS} )
 
 add_executable(mask_distance_map_with_thin_image mask_distance_map_with_thin_image.cpp)
 target_link_libraries(mask_distance_map_with_thin_image SGCore )
@@ -85,6 +89,7 @@ if(VISUALIZE)
     target_link_libraries(highlight_image_points ${DGTAL_LIBRARIES} )
     target_link_libraries(highlight_image_points Qt5::Widgets Qt5::Xml )
     target_link_libraries(highlight_image_points ${VTK_LIBRARIES} )
+    target_include_directories(highlight_image_points PRIVATE ${DGTAL_INCLUDE_DIRS} )
 
     add_executable(visualize_histograms_from_file
         visualize_histograms_from_file.cpp
@@ -92,13 +97,11 @@ if(VISUALIZE)
         )
     target_link_libraries(visualize_histograms_from_file SGAnalyze SGVisualize )
     target_link_libraries(visualize_histograms_from_file ${ITK_LIBRARIES} )
-    target_link_libraries(visualize_histograms_from_file ${DGTAL_LIBRARIES} )
     target_link_libraries(visualize_histograms_from_file Qt5::Widgets Qt5::Xml )
 
     add_executable(visualize_graph_and_image visualize_graph_and_image.cpp)
     target_link_libraries(visualize_graph_and_image SGVisualize)
     target_link_libraries(visualize_graph_and_image ${ITK_LIBRARIES} )
-    target_link_libraries(visualize_graph_and_image ${DGTAL_LIBRARIES} )
     target_link_libraries(visualize_graph_and_image Qt5::Widgets Qt5::Xml )
 endif()
 
