--- a/modules/compare/CMakeLists.txt
+++ b/modules/compare/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SG_MODULE_${SG_MODULE_NAME}_DEPENDS
   )
 set(SG_MODULE_${SG_MODULE_NAME}_SOURCES
   compare_graphs.cpp
+  extend_low_info_graph.cpp
   )
 list(TRANSFORM SG_MODULE_${SG_MODULE_NAME}_SOURCES PREPEND "src/")
 add_library(${SG_MODULE_${SG_MODULE_NAME}_LIBRARY} ${SG_MODULE_${SG_MODULE_NAME}_SOURCES})
