ENH: Add compute_shortest_path between two vertices using dijkstra
It uses the countour length of the edge as weight.

--- a/modules/core/CMakeLists.txt
+++ b/modules/core/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SG_MODULE_${SG_MODULE_NAME}_SOURCES
     filter_spatial_graph.cpp
     graph_data.cpp
     serialize_spatial_graph.cpp
+    shortest_path.cpp
     spatial_graph_utilities.cpp
     )
 list(TRANSFORM SG_MODULE_${SG_MODULE_NAME}_SOURCES PREPEND "src/")
