--- a/modules/compare/test/CMakeLists.txt
+++ b/modules/compare/test/CMakeLists.txt
@@ -5,10 +5,12 @@ set(SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
 set(SG_MODULE_${SG_MODULE_NAME}_TESTS
   test_compare_graphs.cpp
   test_extend_low_info_graph.cpp
+  test_spatial_graph_difference.cpp
   )
 # Fixture defined in test/fixtures
 list(APPEND SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
   FixtureMatchingGraphs
+  FixtureSquareCrossGraph
   SGLocate
   SGVisualize
   )
